# MediaSoup-Peer-to-Peer-Media-Sharing-App

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  run-dev.sh  test.txt
admin/: .gitignore  commands.txt  default.xcf  logo.xcf  spritLinks.txt  stacks.txt  virtual.txt
cephServer/: package-lock.json  package.json
client/: .babelrc  .gitignore  ReloadTrackerPlugin.js  TableLittleBuddies.tsx  eslint.config.js  index.css  index.tsx  package-lock.json  package.json  reload-tracker.js  scrollbar.css  tailwind.config.cjs  tailwind.config.js  tsconfig.json  webpack.config.cjs  webpack.config.js  webpack.config.mjs
elasticSearchServer/: package-lock.json  package.json
embeddingServer/: .gitignore  Cargo.toml  export_onnx.py  tokenizer.json
embeddingServer/src/: main.rs
gamesServer/: package-lock.json  package.json
kafka_2.13-3.8.0/: .gitignore  set-up.sh  start-up.sh  table-top-secrets
liveTextEditingServer/: package-lock.json  package.json
mediasoupServer/: nodemon.json  package-lock.json  package.json
mongoServer/: package-lock.json  package.json  tsconfig.json
nginxAssetsServer/: nginx.conf
nginxServer/: .gitignore
qdrantServer/: package-lock.json  package.json
redisServer/: package-lock.json  package.json
server/: package-lock.json  package.json
tableServer/: package-lock.json  package.json  tsconfig.json
tableStaticContentServer/: package-lock.json  package.json  tsconfig.json
universal/: SanitizationUtils.ts  babylonTypeContant.ts  contentTypeConstant.ts  effectsTypeConstant.ts  reactionsTypeConstant.ts  typeConstant.ts
(+2411 files in other folders)
