[package]
name = "embed_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = "0.6"
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
tokenizers   = "0.13"
ort          = "1.14.0"       
ndarray      = "0.15"
anyhow       = "1.0"
